Fix green box position, remove zoom, fix rating z-index

--- a/web/source/sass/pages/search/strain/search_results.scss
+++ b/web/source/sass/pages/search/strain/search_results.scss
@@ -157,6 +157,7 @@
             .item-info-wrapper .item-info .strain-rating {
                 display: block;
                 padding: 0;
+                z-index: 1;
             }
 
             .item-locations,
